--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,15 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v3
+
+      - name: Get linked issue
+        uses: kin/gh-action-get-linked-issues@v1.0
+        id: inked-issues
+        with:
+          access-token: "${{ secrets.CROSS_REPO_TOKEN }}"
+      
+      - run: echo "Linked issues ${{ steps.linked-issues.outputs.issues }}"
+
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
