--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,6 +20,8 @@ jobs:
       
       - run: echo "Linked issues ${{ steps.linked-issues.outputs.issues }}"
 
+      - run: echo "Testing"
+
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
