--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,12 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v3
+      
+      - name: Hello world action step
+        id: hello
+        uses: reagancn/github-actions-quickstart@v1.1
+        with:
+          who-to-greet: 'Mona the Octocat'
 
       - name: Verify Linked Issue
         uses: hattan/verify-linked-issue-action@v1.1.5
